# cmake-with-gtest

./: .gitignore  CMakeLists.txt  README.org
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  mylib.cpp  mylib.hpp
test/: CMakeLists.txt  gtest.cmake  mylib_test.cpp
